--- a/client/src/pages/remittances/tabs/shift_management/style.css
+++ b/client/src/pages/remittances/tabs/shift_management/style.css
@@ -10,7 +10,8 @@
 
 .expiration-label {
     font-size: 11px;
-    color: #d04a43;
+    /*color: #d04a43;*/
+    color: var(--orange);
     text-align: center;
     font-weight: 600;
     margin-left: 20px;
@@ -29,9 +30,10 @@
     height: 100%;
     grid-column: 1 / 2;
     /*box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);*/
-    background: rgba(255,255,255,1);
+    background: rgba(255, 255, 255, 1);
     border-radius: 5px;
     min-width: 200px;
+    box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
     }
 
 .date-grid {
@@ -52,13 +54,12 @@
     align-items: center;
     flex-direction: row;
     }
+
 .shifts-label-div {
     width: 100%;
     height: 73px;
     margin-top: 30px;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
     }
 
@@ -79,18 +80,31 @@
     /*box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);*/
 
     }
+
+.om-tab-body .ant-table-body * {
+    overflow: scroll !important;
+    /*border: 1px dashed var(--darkgreen);*/
+    background: transparent;
+    border: none !important;
+    /*box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);*/
+
+    }
+
 .om-tab-body .ant-table-wrapper {
     overflow: scroll !important;
-    height: 340px!important;
+    height: 340px !important;
     /*border: 1px dashed var(--darkgreen);*/
 
+    }
 
+.om-tab-body .ant-checkbox-inner {
+    /*background: rgba(196, 196, 196, 0.61) !important;*/
+    border: 1px solid var(--divider)!important;
     }
-.om-tab-body .ant-checkbox-inner{
-    background: rgba(196, 196, 196, 0.61) !important;
-    }
+
 .driver-selection * {
-    border: none !important;
+    font-family: Montserrat, sans-serif;
+    /*border: none !important;*/
     }
 
 .guideline {
@@ -100,8 +114,13 @@
 
 .tab-label {
     font-size: 20px;
-    color: var(--darkgreen);
     font-weight: 600;
+    }
+
+.tab-label-type {
+    font-size: 20px;
+    font-weight: 600;
+    margin-left: 20px;
     }
 
 .date-picker {
@@ -118,7 +137,8 @@
     /*flex-direction: column;*/
     justify-content: center;
     /*align-items: start;*/
-    background: rgba(255,255,255,1);
+    background: rgba(255, 255, 255, 1);
+    box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
     /*background: #9fefd7;*/
     /*box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);*/
 
@@ -152,20 +172,26 @@
     height: 100%;
     }
 
-.create-shift-button{
-    width:100%;
+.create-shift-button {
+    width: 100%;
     height: 70px;
     display: flex;
     justify-content: center;
     align-content: center;
     }
-.supervisor-select{
-    border-radius: 5px!important;
-    font-weight: 600!important;
-    color: var(--orange)!important;
 
+.supervisor-select {
+    border-radius: 0!important;
+    border-top: none!important;
+    border-left: none!important;
+    border-right: none!important;
+    border-bottom: 1px solid var(--divider)!important;
+    width: 70%!important;
+    text-align: start!important;
+    font-weight: 600 !important;
+    color: var(--darkgreen) !important;
     }
 
-.driver-icon img{
-    object-fit: cover!important;
+.driver-icon img {
+    object-fit: cover !important;
     }
