--- a/client/src/pages/remittances/components/remittance_form/style.css
+++ b/client/src/pages/remittances/components/remittance_form/style.css
@@ -2,14 +2,28 @@
     height: 95%;
     width: 80%;
     display: grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 80% 30%;
     background: rgba(255, 255, 255, 1);
     border-radius: 5px;
     }
 
 .input-div {
+    display: grid;
     grid-column: 1/2;
+    grid-template-rows: 10% 10% 50% 30%;
     }
+.time-data{
+    grid-row: 1/2;
+    }
+.km-range{
+    grid-row: 2/3;
+    }
+.tickets-sold{
+    grid-row: 3/4;
+    }
+/*.bottom-panel{*/
+    /*grid-row: 4/5;*/
+    /*}*/
 
 .computed-div {
     grid-column: 2/3;
@@ -60,7 +74,7 @@
 
 .tickets-sold {
     width: 100%;
-    height: 200px;
+    height: 300px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -83,6 +97,13 @@
     align-items: center;
     justify-content: center;
     }
+.less-range-div {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
 
 .bottom-panel {
     display: flex;
@@ -92,8 +113,9 @@
     }
 
 .less-items {
+    grid-row: 4/5;
     width: 100%;
-    height: 200px;
+    height: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
