--- a/client/src/pages/remittances/components/remittance_form/style.css
+++ b/client/src/pages/remittances/components/remittance_form/style.css
@@ -120,3 +120,13 @@
     align-items: center;
     }
 
+.computations{
+    height: 80%;
+    width: 100%;
+    margin-bottom: 10px;
+    }
+.grid-item{
+    display: grid;
+    grid-template-columns: 20% 80%;
+    }
+
