--- a/client/src/pages/remittances/tabs/shift_management/style.css
+++ b/client/src/pages/remittances/tabs/shift_management/style.css
@@ -73,7 +73,8 @@
     }
 
 .om-tab-body .ant-table-body {
-    overflow: scroll !important;
+    overflow-x: scroll !important;
+    overflow-y: hidden !important;
     /*border: 1px dashed var(--darkgreen);*/
     border-radius: 5px;
     background: transparent
