--- a/client/src/pages/remittances/tabs/beep/style.css
+++ b/client/src/pages/remittances/tabs/beep/style.css
@@ -9,3 +9,11 @@
     box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);
     flex-direction: column;
     }
+.table-div{
+    width: 90%!important;
+    height: 80%!important;
+    }
+.user-input{
+    margin-top: 5px!important;
+    margin-bottom: 5px!important;
+    }
