Initial Members Page commit

--- a/client/src/pages/remittances/tabs/beep/style.css
+++ b/client/src/pages/remittances/tabs/beep/style.css
@@ -17,3 +17,6 @@
     margin-top: 5px!important;
     margin-bottom: 5px!important;
     }
+.transaction-modal .ant-modal{
+    width: 400px!important;
+    }
