--- a/client/src/pages/members/style.css
+++ b/client/src/pages/members/style.css
@@ -6,6 +6,7 @@
     right: 0;
     overflow: hidden;
     }
+
 .page-body {
     height: 100%;
     position: relative;
@@ -21,7 +22,7 @@
     width: 30%;
     justify-content: center;
     align-items: center;
-    min-width:300px;
+    min-width: 300px;
     /*border-radius: 5px;*/
     overflow: scroll;
     /*background: rgba(255, 255, 255, 1);*/
@@ -33,6 +34,7 @@
     /*border: 1px solid var(--divider);*/
 
     }
+
 .user-list {
     top: 2%;
     padding: 0 10px 10px 10px;
@@ -51,12 +53,13 @@
 
     /*design for floating card css*/
     border-radius: 5px;
-    box-shadow: 0 1px 5px 0 rgba(45,62,80,.12);
+    box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
     background: rgba(255, 255, 255, 1) !important;
 
     }
+
 .list-item:hover {
-    box-shadow: 0 1px 40px 0 rgba(45,62,80,.12);
+    box-shadow: 0 1px 40px 0 rgba(45, 62, 80, .12);
     }
 
 .list-user-type {
@@ -67,9 +70,10 @@
     /*color: rgb(71, 130, 120) !important;*/
     font-weight: 600;
     }
+
 /*.list-title:hover {*/
-    /*color: var(--teal);*/
-    /*}*/
+/*color: var(--teal);*/
+/*}*/
 
 .list-description {
     font-weight: 300 !important;
@@ -89,41 +93,45 @@
     background: white;
     box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);
     }
-.empty-image{
+
+.empty-image {
     display: block;
     height: 200px;
     width: 250px;
     margin-bottom: 20px;
     }
-.empty-message{
+
+.empty-message {
     font-family: Montserrat, sans serif;
     size: 14px;
     font-weight: 700;
     }
-.user-spinner{
-    color: var(--darkgreen)!important;
-    position: absolute! important;
-    top: 35%!important;
-    }
 
+.user-spinner {
+    color: var(--darkgreen) !important;
+    position: absolute ! important;
+    top: 35% !important;
+    }
 
 /*ant form css*/
 .dynamic-delete-button {
-  cursor: pointer;
-  position: relative;
-  top: 4px;
-  font-size: 24px;
-  color: #999;
-  transition: all .3s;
-}
-.dynamic-delete-button:hover {
-  color: #777;
-}
-.dynamic-delete-button[disabled] {
-  cursor: not-allowed;
-  opacity: 0.5;
-}
-.list-avatar img{
-    object-fit: cover!important;
+    cursor: pointer;
+    position: relative;
+    top: 4px;
+    font-size: 24px;
+    color: #999;
+    transition: all .3s;
     }
 
+.dynamic-delete-button:hover {
+    color: #777;
+    }
+
+.dynamic-delete-button[disabled] {
+    cursor: not-allowed;
+    opacity: 0.5;
+    }
+
+.list-avatar img {
+    object-fit: cover !important;
+    }
