--- a/client/src/pages/members/style.css
+++ b/client/src/pages/members/style.css
@@ -138,7 +138,61 @@
 
 /*transactions css*/
 
-
 /*overview css*/
+.profile-container {
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+    }
+
+.container {
+    width: 100%;
+    height: 100%;
+    }
+
+.profile-image {
+    border-radius: 100px;
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    display: inline-block;
+    }
+
+.header-div {
+    width: 100%;
+    height: 120px;
+    display: flex;
+    flex-direction: row;
+    }
+
+.basic-info {
+    margin-left: 20px;
+    width: 80%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    }
+
+.member-info {
+    height: 60%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    }
+
+.info-row-1 {
+    grid-column: 1/2;
+    margin-left: 40px;
+    }
+
+.info-row-2 {
+    grid-column: 2/3;
+    margin-left: 40px;
+    }
+
+.label {
+    color: var(--darkgreen)
+    }
 
 /*shares css*/
