Allowed Empty 2nd range on tickets

--- a/client/src/pages/remittances/components/remittance_form/style.css
+++ b/client/src/pages/remittances/components/remittance_form/style.css
@@ -76,8 +76,8 @@
 
 .input {
     width: 30% !important;
-    background: var(--bgcolor) !important;
-    border: none !important;
+    /*background: var(--bgcolor) !important;*/
+    /*border: none !important;*/
     }
 
 .tickets-sold {
