--- a/client/src/pages/members/style.css
+++ b/client/src/pages/members/style.css
@@ -162,7 +162,10 @@
     width: 100%;
     height: 120px;
     display: flex;
+    padding-left: 30px;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
     }
 
 .basic-info {
