--- a/client/src/pages/reports/style.css
+++ b/client/src/pages/reports/style.css
@@ -3,20 +3,41 @@
     height: 100%;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     }
+
 .reports-header {
     display: block;
     position: relative;
     width: inherit;
-    height: 25%;
+    height: 20%;
     min-height: 100px;
     margin-left: 2px;
     min-width: 400px;
     right: 0;
-    /*background: rgba(255, 255, 255, 1);*/
+    background: rgba(255, 255, 255, 1);
     /*border-bottom: 1px solid var(--divider);*/
     /*box-shadow: 2px 1px 7px -2px #636363;*/
     /*box-shadow: 0 1px 20px -5px rgba(51, 71, 91, 0.12)*/
     /*box-shadow: 0 2px 8px #f0f1f2;*/
+    }
+
+.reports-content {
+    display: inline-block;
+    height: 83%;
+    width: 100%;
+    padding: 10px;
+    padding-left: 20px !important
+    }
+
+.report-item {
+    border: none !important;
+    border-radius: 5px !important;
+    background: rgba(255,255,255,1);
+    box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);
+    }
+
+.report-item .ant-card-cover {
+    height: 50px !important;
+    padding: 20px !important;
     }
