--- a/client/src/pages/remittances/tabs/shift_management/style.css
+++ b/client/src/pages/remittances/tabs/shift_management/style.css
@@ -33,7 +33,9 @@
     background: rgba(255, 255, 255, 1);
     border-radius: 5px;
     min-width: 200px;
-    box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
+    /*box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);*/
+    box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);
+
     }
 
 .date-grid {
@@ -143,7 +145,9 @@
     justify-content: center;
     /*align-items: start;*/
     background: rgba(255, 255, 255, 1);
-    box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);
+    /*box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);*/
+    box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);
+
     /*background: #9fefd7;*/
     /*box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);*/
 
