--- a/client/src/pages/reports/style.css
+++ b/client/src/pages/reports/style.css
@@ -35,7 +35,8 @@
     border: none !important;
     border-radius: 5px !important;
     background: rgba(255,255,255,1);
-    box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);
+    /*box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);*/
+    box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1)
     }
 
 .report-item .ant-card-cover {
