--- a/client/src/pages/users/components/user_stepper/style.css
+++ b/client/src/pages/users/components/user_stepper/style.css
@@ -3,7 +3,7 @@
     border: 1px dashed #e9e9e9;
     border-radius: 6px;
     background-color: #fafafa;
-    height: 450px!important;
+    height: auto!important;
     min-height: 200px;
     text-align: center;
     display: flex;
@@ -26,4 +26,5 @@
     }
 .user-input{
     margin-top:10px!important;
+    width: 100%!important;
     }
