--- a/client/src/pages/users/style.css
+++ b/client/src/pages/users/style.css
@@ -51,7 +51,9 @@
 
     /*design for floating card css*/
     border-radius: 5px;
-    box-shadow: 0 1px 5px 0 rgba(45,62,80,.12);
+    /*box-shadow: 0 1px 5px 0 rgba(45,62,80,.12);*/
+    box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);
+
     background: rgba(255, 255, 255, 1) !important;
 
     }
