Added Date Filters to remittance report

--- a/client/src/pages/reports/content/remittance_report/style.css
+++ b/client/src/pages/reports/content/remittance_report/style.css
@@ -1,3 +1,14 @@
 .report-body{
-    width: 500px!important;
+    width: auto!important;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    }
+.report-filters{
+    width: 100%;
+    grid-column: 1/2;
+    height: 100%;
+    }
+.report-body .remittance-table{
+    width: auto!important;
+    grid-column: 2/3;
     }
