Added Shift Type Summary in Report

--- a/client/src/pages/reports/content/remittance_report/style.css
+++ b/client/src/pages/reports/content/remittance_report/style.css
@@ -11,4 +11,8 @@
 .report-body .remittance-table{
     width: auto!important;
     grid-column: 2/3;
+    margin-left: 20px!important;
+    }
+.report-body p{
+    grid-column: 2/3;
     }
