--- a/client/src/pages/reports/style.css
+++ b/client/src/pages/reports/style.css
@@ -36,7 +36,9 @@
     border-radius: 5px !important;
     background: rgba(255,255,255,1);
     /*box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);*/
-    box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1)
+    box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);
+    display: inline-block;
+    margin-right: 20px!important;
     }
 
 .report-item .ant-card-cover {
@@ -58,4 +60,10 @@
     width: 100%;
     margin-top: 10px;
 
+    }
+.member-reports{
+    justify-content: center;
+    height: auto;
+    width: 100%;
+    margin-bottom: 20px
     }
