--- a/client/src/pages/members/style.css
+++ b/client/src/pages/members/style.css
@@ -6,7 +6,9 @@
     right: 0;
     overflow: hidden;
     }
-
+.item-details-wrapper{
+    position: relative;
+    }
 .page-body {
     height: 100%;
     position: relative;
@@ -137,6 +139,18 @@
     }
 
 /*transactions css*/
+.item-details-wrapper .transactions{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+
+.item-details-wrapper .profile-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+
 
 /*overview css*/
 .profile-container {
@@ -197,5 +211,29 @@
 .label {
     color: var(--darkgreen)
     }
-
+.transactions{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    }
+.transaction-tables{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    }
+.table-container{
+    padding: 10px;
+    }
+.transaction-tables .remittance-table{
+    margin-left: 5px!important;
+    margin-right: 5px!important;
+    height: 300px!important;
+    }
+.tab-label button{
+    margin-left: 20px!important;
+    }
 /*shares css*/
