--- a/client/src/pages/remittances/subpages/supervisor_remittance/style.css
+++ b/client/src/pages/remittances/subpages/supervisor_remittance/style.css
@@ -14,6 +14,16 @@
     /*box-shadow: 0 2px 8px #f0f1f2;*/
     }
 
+.discrepancy-row{
+    margin-top: 10px;
+    }
+.discrepancy-row p{
+    font-family: Montserrat,sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    color:var(--orange);
+    }
+
 .supervisor-rem-content {
     display: inline-grid;
     padding: 10px;
