--- a/client/src/pages/remittances/tabs/ticketing/style.css
+++ b/client/src/pages/remittances/tabs/ticketing/style.css
@@ -116,7 +116,7 @@
     display: grid;
     grid-template-columns: 25% 75%;
     width: 100%;
-    height: 500px !important;
+    height: 550px !important;
     background-color: rgba(255, 255, 255, 1);
     }
 
@@ -138,4 +138,7 @@
     border: 1px dashed #e9e9e9;
     border-radius: 6px;
     background-color: #fafafa;
+    }
+.discrepancy-row{
+    margin-top: 10px;
     }
