--- a/client/src/pages/reports/content/transactions_report/style.css
+++ b/client/src/pages/reports/content/transactions_report/style.css
@@ -1,7 +1,7 @@
 .transaction-report-body{
     width: auto!important;
-    /*display: grid;*/
-    /*grid-template-columns: 30% 70%;*/
+    display: grid;
+    grid-template-columns: 30% 70%;
     }
 .report-filters{
     width: 100%;
@@ -10,8 +10,8 @@
     }
 .transaction-report-body .remittance-table{
     width: auto!important;
-    /*grid-column: 2/3;*/
-    /*margin-left: 20px!important;*/
+    grid-column: 2/3;
+    margin-left: 20px!important;
     }
 /*.report-body p{*/
     /*grid-column: 2/3;*/
