Updated Shares Creation

--- a/client/src/pages/reports/content/transactions_report/style.css
+++ b/client/src/pages/reports/content/transactions_report/style.css
@@ -19,3 +19,6 @@
 .transaction-report-body .remittance-table .ant-table-tbody{
     overflow: scroll;
     }
+.report-modal .ant-modal-content{
+    width: 800px!important;
+    }
