Fixed Missing Ticket in Remittance

--- a/client/src/pages/remittances/subpages/supervisor_remittance/style.css
+++ b/client/src/pages/remittances/subpages/supervisor_remittance/style.css
@@ -203,9 +203,9 @@
     flex-direction: column;
     }
 
-.void-list {
-    overflow: scroll !important;
-    }
+/*.void-list {*/
+    /*overflow: scroll !important;*/
+    /*}*/
 
 .void-item * {
     color: var(--warningred) !important;
