--- a/client/src/components/avatar/style.css
+++ b/client/src/components/avatar/style.css
@@ -43,7 +43,17 @@
     grid-row: 2 / 2;
     justify-self: start;
     align-self: center;
+    cursor: pointer;
     }
+
+.notification:hover{
+    opacity: 0.8;
+}
+
+.notification-area{
+    height: 30vh;
+    width: 20vw;
+}
 
 /*.name-tag-grid{*/
     /*display: grid;*/
