Complete front end notification

--- a/client/src/components/avatar/style.css
+++ b/client/src/components/avatar/style.css
@@ -53,6 +53,8 @@
 .notification-area{
     height: 30vh;
     width: 20vw;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 /*.name-tag-grid{*/
