--- a/client/src/pages/tickets/style.css
+++ b/client/src/pages/tickets/style.css
@@ -3,5 +3,74 @@
     height: 100%;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    }
+
+.ticket-panels-wrapper {
+    height: 100%;
+    width: 100%;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 30% 70%;
+    position: relative;
+    padding: 10px;
+    }
+
+.driver-ticket-list {
+    height: 100%;
+    width: 100%;
+    grid-column: 1/2;
+    border: none;
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 1);
+    /*box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);*/
+    box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);
+    /*box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);*/
+
+    }
+.tickets-panel{
+    height: 100%;
+    width: 98%;
+    grid-column: 2/3;
+    margin-left: 10px;
+    border: none;
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 1);
+    /*box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);*/
+    /*box-shadow: 2px 10px 50px -2px rgba(51, 71, 91, 0.12);*/
+    box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);
+    }
+
+.tickets-table {
+    width: 100%;
+    height: 100%;
+    grid-column: 2 / 3;
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 1);
+    /*box-shadow: 0 1px 5px 0 rgba(45, 62, 80, .12);*/
+    box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);
+
+    }
+
+.tickets-table .ant-table-content {
+    /*border: 1px solid #dfe3eb !important;*/
+    border-radius: 5px ! important;
+
+    }
+
+.tickets-table .ant-table-thead > tr > th {
+    /*background: rgba(0, 77, 128, .0392157) !important;*/
+    background: rgba(255, 255, 255, 1);
+    font-weight: 500;
+    color: var(--navdark);
+
+    border-bottom: 1px solid #dfe3eb !important;
+
+    }
+
+.tickets-table * {
+    font-family: Montserrat, sans-serif;
+    border: none !important;
+
     }
