--- a/client/src/pages/tickets/style.css
+++ b/client/src/pages/tickets/style.css
@@ -45,6 +45,7 @@
 .tickets-table {
     width: 100%;
     height: 100%;
+    overflow: scroll!important;
     grid-column: 2 / 3;
     border-radius: 5px;
     background: rgba(255, 255, 255, 1);
