--- a/client/src/pages/remittances/subpages/supervisor_remittance/style.css
+++ b/client/src/pages/remittances/subpages/supervisor_remittance/style.css
@@ -141,10 +141,10 @@
 
 .driver-list-wrapper {
     display: flex;
-    flex-direction: column;
+    flex-direction:row;
     justify-content: center;
     align-items: center;
-    width: 400px;
+    width: 600px;
     height: 300px;
     }
 
