Forgot to push -- working remittance eport

--- a/client/src/pages/reports/content/remittance_summary/style.css
+++ b/client/src/pages/reports/content/remittance_summary/style.css
@@ -17,13 +17,37 @@
 .report-labels{
     height:10%;
     width: 100%;
-    background: gray;
     display: flex;
+    align-items: center;
     justify-content: center;
     }
 .report-body{
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    }
+
+thead{
+    padding: 5px;
+    text-align: center;
+    /*border: 3px solid black;*/
+    }
+td{
+    text-align: center;
+    }
+table{
+    margin-top: 20px;
+    margin-left: 40px;
+    margin-right: 70px;
+    border-spacing: 10px;
+    }
+.total-line{
+    border-top: 1px solid black;
+    margin-top: 50px;
+    }
+.end-label{
+    font-weight: bold;
+    justify-self: center;
+    align-self: center;
     }
