Added A lot of things
- added supervisor weekly report
- added members page
- added schedule printing

--- a/client/src/pages/reports/content/ticket_reports/style.css
+++ b/client/src/pages/reports/content/ticket_reports/style.css
@@ -42,7 +42,7 @@ td {
     text-align: center;
     }
 
-table {
+.container table {
     margin-top: 20px;
     margin-left: 40px;
     margin-right: 70px;
