--- a/client/src/pages/reports/content/ticket_breakdown_shuttle/style.css
+++ b/client/src/pages/reports/content/ticket_breakdown_shuttle/style.css
@@ -4,12 +4,12 @@
     grid-template-columns: 30% 70%;
     }
 
-.report-modal-container {
+.formatted-report-modal-container {
     height: 100%;
     width: 100%;
     }
 
-.container {
+.formatted-container {
     height: 100%;
     width: 100%;
     display: flex;
@@ -25,7 +25,7 @@
     justify-content: center;
     }
 
-.report-body {
+.formatted-report-body {
     width: 100%;
     height: 100%;
     display: flex;
@@ -42,7 +42,7 @@ td {
     text-align: center;
     }
 
-.container table {
+.formatted-container table {
     margin-top: 20px;
     margin-left: 40px;
     margin-right: 70px;
