--- a/client/src/pages/remittances/tabs/shift_history/style.css
+++ b/client/src/pages/remittances/tabs/shift_history/style.css
@@ -210,7 +210,13 @@
     }
 .sched-list{
     margin-top: 20px!important;
+    height: 200px!important;
     }
 .printable{
     display: none;
+    }
+.sched-wrapper{
+    display: flex;
+    height: 400px!important;
+    overflow:scroll;
     }
