--- a/client/src/pages/remittances/tabs/shift_history/style.css
+++ b/client/src/pages/remittances/tabs/shift_history/style.css
@@ -220,3 +220,9 @@
     height: 400px!important;
     overflow:scroll;
     }
+.buttons-container{
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    }
