--- a/client/src/pages/remittances/tabs/shift_history/style.css
+++ b/client/src/pages/remittances/tabs/shift_history/style.css
@@ -102,14 +102,15 @@
 
     }
 
-.om-tab-body .ant-checkbox-inner{
-    border-radius: 3px!important;
+.om-tab-body .ant-checkbox-inner {
+    border-radius: 3px !important;
     /*background: rgba(196, 196, 196, 0.61) !important;*/
-    border: 1px solid var(--divider)!important;
+    border: 1px solid var(--divider) !important;
     }
+
 /*.om-tab-body .ant-checkbox-checked{*/
-    /*background: var(--lightgreen);*/
-    /*}*/
+/*background: var(--lightgreen);*/
+/*}*/
 
 .history-pane-content * {
     font-family: Montserrat, sans-serif;
@@ -125,7 +126,6 @@
     font-size: 20px;
     font-weight: 600;
     }
-
 
 .tab-label-type {
     font-size: 20px;
@@ -180,10 +180,10 @@
     }
 
 /*.mn-shift-pane {*/
-    /*grid-column: 3/4;*/
-    /*!*grid-row: 2/3;*!*/
-    /*height: 100%;*/
-    /*}*/
+/*grid-column: 3/4;*/
+/*!*grid-row: 2/3;*!*/
+/*height: 100%;*/
+/*}*/
 
 .create-shift-button {
     width: 100%;
@@ -194,13 +194,13 @@
     }
 
 .supervisor-select {
-    border-radius: 0!important;
-    border-top: none!important;
-    border-left: none!important;
-    border-right: none!important;
-    border-bottom: 1px solid var(--divider)!important;
-    width: 70%!important;
-    text-align: start!important;
+    border-radius: 0 !important;
+    border-top: none !important;
+    border-left: none !important;
+    border-right: none !important;
+    border-bottom: 1px solid var(--divider) !important;
+    width: 70% !important;
+    text-align: start !important;
     font-weight: 600 !important;
     color: var(--darkgreen) !important;
     }
@@ -208,21 +208,48 @@
 .driver-icon img {
     object-fit: cover !important;
     }
-.sched-list{
-    margin-top: 20px!important;
-    height: 200px!important;
+
+.sched-list {
+    margin-top: 20px !important;
+    height: 200px !important;
     }
-.printable{
+
+.printable {
     display: none;
     }
-.sched-wrapper{
+
+.sched-wrapper {
     display: flex;
-    height: 400px!important;
-    overflow:scroll;
+    height: 400px !important;
+    overflow: scroll;
     }
-.buttons-container{
+
+.buttons-container {
     height: auto;
     width: 100%;
     display: flex;
     flex-direction: row;
+    }
+.sched-modal-tables-wrapper {
+    grid-template-columns: 50% 50%;
+    display: grid;
+    width: 92%;
+    height: 70%;
+    grid-column-gap: 8px;
+    flex-direction: row;
+    }
+.sched-am-shift-pane {
+    grid-column: 1/2;
+    /*grid-row: 2/3;*/
+    height: 100%;
+    }
+
+.sched-pm-shift-pane {
+    grid-column: 2/3;
+    /*grid-row: 2/3;*/
+    height: 100%;
+    }
+.sched-modal {
+    height: 700px!important;
+    width: 500px!important;
     }
