reimplemented purchase order

--- a/client/src/pages/inventory/style.css
+++ b/client/src/pages/inventory/style.css
@@ -71,7 +71,7 @@
     margin-bottom: 15px;
 }
 
-.purchaseOrderModal{
+.purchase-order-modal{
     padding: 0 !important;
     width: 8.5in !important;
 }
