Added view beep cards in profile

--- a/client/src/pages/inventory/components/header/style.css
+++ b/client/src/pages/inventory/components/header/style.css
@@ -145,8 +145,8 @@
     background: var(--darkgreen)!important;
     }
 
-.ant-input{
-    padding: inherit!important;
+.upload-input{
+    padding: inherit! important;
     }
 
 
