--- a/client/src/pages/remittances/subpages/supervisor_remittance/revised-style.css
+++ b/client/src/pages/remittances/subpages/supervisor_remittance/revised-style.css
@@ -81,3 +81,22 @@ Col {
     margin-left: 3px;
     margin-right: 3px
 }
+
+.reason-label {
+    margin-right: 5px;
+}
+
+.info-circle {
+    margin-left: 3px;
+    margin-right: 3px;
+}
+
+.modal-detail-title {
+    font-weight: bold;
+}
+
+.modal-detail-value {
+    margin-left: 5px;
+    margin-right: 5px;
+    font-weight: 300;
+}
