--- a/client/src/pages/remittances/subpages/driver_remittance/revised-style.css
+++ b/client/src/pages/remittances/subpages/driver_remittance/revised-style.css
@@ -44,3 +44,18 @@
     margin-bottom: 15px;
     margin-right: 10px;
 }
+
+.form-footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    border-top: 1px solid #e9e9e9;
+    padding: 10px 16px;
+    background: #fff;
+    text-align: right;
+}
+
+.field-guide {
+    margin-right: 5px;
+}
