--- a/client/src/pages/remittances/subpages/supervisor_remittance/revised-style.css
+++ b/client/src/pages/remittances/subpages/supervisor_remittance/revised-style.css
@@ -100,3 +100,22 @@ Col {
     margin-right: 5px;
     font-weight: 300;
 }
+
+.confirm-input-number {
+    width: 100%;
+}
+
+.form-footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    border-top: 1px solid #e9e9e9;
+    padding: 10px 16px;
+    background: #fff;
+    text-align: right;
+}
+
+.confirm-remittance-container {
+    margin-top: 100px;
+}
