Fixed View Remittances

--- a/client/src/pages/remittances/tabs/shift_history/style.css
+++ b/client/src/pages/remittances/tabs/shift_history/style.css
@@ -115,6 +115,7 @@
 .history-pane-content * {
     font-family: Montserrat, sans-serif;
     /*border: none !important;*/
+    overflow:scroll!important;
     }
 
 .guideline {
