Fixed reports and added LBATSC Logo

--- a/client/src/pages/reports/content/ticket_per_day/style.css
+++ b/client/src/pages/reports/content/ticket_per_day/style.css
@@ -9,3 +9,10 @@
   thead { display:table-header-group }
   tfoot { display:table-footer-group }
 }
+.lbatsc{
+    height: 80px;
+    }
+.lbatsc-container{
+    display: flex;
+    justify-content: center;
+    }
