Styled driver arrival trigger
- also added that if driver has already triggered it for the day, he no longer has to trigger it

--- a/client/src/pages/remittances/subpages/driver_remittance/revised-style.css
+++ b/client/src/pages/remittances/subpages/driver_remittance/revised-style.css
@@ -5,6 +5,21 @@
     padding: 20px;
 }
 
+.deployment-container {
+    width: 200px;
+    padding: 10px 5px;
+}
+
+.time-in-label {
+    font-weight: 450;
+    padding-right: 5px;
+    padding-left: 3px;
+}
+
+.time-in-time {
+    font-weight: 350;
+}
+
 .item-date {
     font-weight: 700;
 }
