Fixed Beep Page CSS

--- a/client/src/pages/remittances/tabs/beep/style.css
+++ b/client/src/pages/remittances/tabs/beep/style.css
@@ -1,16 +1,16 @@
 .beep-tab-body{
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
     align-items: center;
     background: white;
     border-radius: 5px;
     box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.1);
     flex-direction: column;
+    padding: 20px;
+
     }
 .table-div{
-    width: 90%!important;
+    width: 98%!important;
     height: 80%!important;
     }
 .user-input{
