Added assigned drivers list

--- a/client/src/pages/remittances/subpages/driver_remittance/revised-style.css
+++ b/client/src/pages/remittances/subpages/driver_remittance/revised-style.css
@@ -99,3 +99,13 @@
 .discrepancy-row {
     margin-top: 40px;
 }
+
+.assigned-driver-button {
+    color: blue;
+    cursor: pointer;
+}
+
+.driver-name {
+    float: right;
+    font-weight: 550;
+}
